fix: align navbar height variable and resolve spacing gap

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -41,7 +41,7 @@ $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 
-$navbar-height: 80px;
+$navbar-height: 70px;
 
 $border-radius-sm: 4px;
 $border-radius-md: 8px;
